[package]
name = "consul-api"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

build = false

[package.metadata.docs.rs]
features = ["with-isahc"]

[features]
# default = ["with-isahc"]
default = ["with-isahc", "_integration_tests"]

with-isahc = ["isahc"]

_integration_tests = []

[dependencies]
golang-type-decl = { version = "0.2" }
# golang-type-decl = { version = "0.2", path = "../../golang-rs/golang-type-decl/golang-type-decl" }
golang-type = { version = "0.1" }

serde = { version = "1.0", default_features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default_features = false, features = ["std"] }

protobuf = { version = "=3.0.0-pre", default-features = false, features = ["with-serde"], git = "https://github.com/stepancheg/rust-protobuf" }

url = { version = "2.2", default-features = false }
http = { version = "0.2", default-features = false }
futures-core = { version = "0.3", default-features = false, features = ["std"] }
paste = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }

isahc = { version = "1.3", default-features = false, optional = true }

[build-dependencies]
protoc-rust = { version = "=3.0.0-pre", git = "https://github.com/stepancheg/rust-protobuf" }

[dev-dependencies]
tokio = { version = "1.5", features = ["macros", "rt"] }
env_logger = { version = "0.8" }
log = { version = "0.4" }

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["isahc"],
    ["_integration_tests"],
]
