[package]
name = "consul-api"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

build = false

[package.metadata.docs.rs]
features = ["with-isahc"]

[features]
default = ["with-isahc"]

with-isahc = ["isahc"]

_integration_tests = ["with-isahc"]

[dependencies]
consul-core = { version = "=0.0.0", path = "../consul-core" }
consul-api-endpoint = { version = "=0.0.0", path = "../consul-api-endpoint/consul-api-endpoint", features = ["with-macro"] }

golang-type = { version = "0.1" }

url = { version = "2.2", default-features = false }
http = { version = "0.2", default-features = false }
futures-core = { version = "0.3", default-features = false, features = ["std"] }
thiserror = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default_features = false, features = ["std"] }

isahc = { version = "1.3", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.5", features = ["macros", "rt"] }
env_logger = { version = "0.8" }
log = { version = "0.4" }

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["isahc"],
    ["_integration_tests"],
]
