[package]
name = "consul-api-endpoint-core"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[dependencies]
http = { version = "0.2", default-features = false }
serde = { version = "1.0", default_features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default_features = false, features = ["std"] }
thiserror = { version = "1.0", default-features = false }
