[package]
name = "consul-api-endpoint-macro"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "1.0", default-features = false, features = ["parsing", "proc-macro"] }
